--- a/index.html
+++ b/index.html
@@ -79,13 +79,16 @@
       </div>
     </section>
     <section class="about-section">
-      <h1>Our purpose</h1>
+      <h1>Our goal</h1>
       <div class="about-background">
         <div class="about-wrapper">
           <div class="about-text">
             <p>
               We believe science should not be confined to the textbook, but
-              brought to live through exhibits. This is why we have over 1000
+              brought to live through exhibits. 
+            </p>
+            <p>
+              This is why we have over 1000
               different exhibits on the many varied subjects of science to
               explore. Many of these exhibits are designed for you to interact
               with and play around to see science come to life (apart from the
@@ -97,14 +100,14 @@
               committed to making science accessible to all.
             </p>
           </div>
-           <div class="about-img">
-           </div>
+          <div class="about-img">
+          </div>
         </div>
       </div>
     </section>
 
     <section class="event-section">
-      <h1>Special Events & Exhibitions</h1>
+      <h1>Events & Exhibitions</h1>
       <div class="event-container">
         <div class="event">
           <div class="event-img">
@@ -150,17 +153,14 @@
               On loan from the NEMO Science Museum in Amsterdam, the
               Energetica exhibition is coming to the Community Science Museum.
               It`s a series of installations that allow visitors to experience
-              the power of the elements as we harness them. From solar energy
-              powering lighting, to `Wind Island` that shows how turbines are
-              able to use and control wind to create power.
+              the power of the elements as we harness them. 
             </p>
           </div>
         </div>
         <div class="event">
           <div class="event-img">
             <p>March 14th</p>
-            <img src="../images/billetto-editorial-334686.jpg"
-              alt="teenager wearing VR googles and painting" />
+            <img src="../images/billetto-editorial-334686.jpg" alt="teenager wearing VR googles and painting" />
           </div>
           <div class="event-txt">
             <h2>Experience Virtual Reality</h2>
@@ -218,7 +218,8 @@
         <div class="explore-container">
           <div class="explore-image">
             <h2>For researchers</h2>
-            <img src="../images/scientific.jpg" alt="female scientist holding a controller and standing in front of a machine " />
+            <img src="../images/scientific.jpg"
+              alt="female scientist holding a controller and standing in front of a machine " />
           </div>
           <div class="explore-text">
             <p>
