addednsupport us page

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Community Science Museum|Visit us</title>
+    <title>Community Science Museum|Get involved</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
@@ -38,6 +38,7 @@
                         <li><a href="exhibitions.html">Exhibitions</a></li>
                         <li><a href="visit.html">Visit us</a></li>
                         <li><a href="getinvolved.html">Get involved</a></li>
+                        <li><a href="donate.html">Support us</a></li>
                     </ul>
                 </div>
             </nav>
@@ -83,6 +84,9 @@
                         Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the
                         wonders of nature with people? Well you could be just the right person to enjoy an internship at
                         the museum.
+                    </p>
+                    <p>
+                        You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community.
                     </p>
                 </div>
                 <div class="internships-img">
