--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <li><a href="exhibitions.html">Exhibitions</a></li>
             <li><a href="visit.html">Visit us</a></li>
             <li><a href="getinvolved.html">Get involved</a></li>
+            <li><a href="donate.html">Support us</a></li>
           </ul>
         </div>
       </nav>
@@ -85,7 +86,7 @@
           <div class="about-text">
             <p>
               We believe science should not be confined to the textbook, but
-              brought to live through exhibits. 
+              brought to live through exhibits.
             </p>
             <p>
               This is why we have over 1000
