--- a/visit.html
+++ b/visit.html
@@ -38,6 +38,7 @@
                         <li><a href="exhibitions.html">Exhibitions</a></li>
                         <li><a href="visit.html">Visit us</a></li>
                         <li><a href="getinvolved.html">Get involved</a></li>
+                        <li><a href="donate.html">Support us</a></li>
                     </ul>
                 </div>
             </nav>
