--- a/donate.html
+++ b/donate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Community Science Museum|Exhibitions</title>
+    <title>Community Science Museum|Support us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
@@ -20,7 +20,7 @@
 <body>
     <header class="header-container">
         <div class="search">
-            <input type="text" class="search-text" placeholder="Search...">
+            <input type="text" class="search-text" placeholder="Search..." />
             <button class="search-button"><i class="fas fa-search"></i></button>
         </div>
         <div class="logo-position logo-mobile">
@@ -46,53 +46,27 @@
     </header>
     <div class="spacer"></div>
     <div class="search2">
-        <input type="text" class="search-text" placeholder="Search...">
+        <input type="text" class="search-text" placeholder="Search..." />
         <button class="search-button"><i class="fas fa-search"></i></button>
     </div>
-    <div class="exhibitions">
-        <h1>Exhibitions</h1>
+    <div class="support-us">
+        <h1>Support us</h1>
     </div>
-    <main class="exhibitions-background">
-        <section class="exhibitions-container">
-            <div class="exhibition-type">
-                <h2>Cosmology</h2>
-                <img src="../images/celso-405219.jpg" alt="">
-                <p>Explore the wonders of our cosmos. Our fantastic exhibition, ‘The Sky Above Us’, explores the night
-                    sky and what we can see and know about the universe around us. </p>
-                <p class="explore">Explore</p>
+    <main class="support-background">
+        <section class="support-section">
+            <div class="support-img">
             </div>
-            <div class="exhibition-type">
-                <h2>Evolution</h2>
-                <img src="../images/mammoth-1257288_1920.jpg" alt="">
-                <p>Discover the origins of life on this planet and how the species we know today have evolved our time.
-                    You can also take some time to meet a few of the creatures who didn’t survive, including our Woolly
-                    Mammoth, the Dodos, and a number of dinosaurs too. </p>
-                <p class="explore">Explore</p>
-            </div>
-            <div class="exhibition-type">
-                <h2>Biology & Medicine</h2>
-                <img src="../images/skeleton-414543_1920.jpg" alt="">
-                <p>For many people their life expectancy is much longer and their quality of life much improved, thanks
-                    to the growth of our understanding of medicine. Over a series of exhibits we explore the history of
-                    medicine and take a look at some major breakthroughs including the discovery of penicillin and the
-                    first heart transplant.</p>
-                <p class="explore">Explore</p>
-            </div>
-            <div class="exhibition-type">
-                <h2>Robotics & AI</h2>
-                <img src="../images/andy-kelly-0E_vhMVqL9g-unsplash.jpg" alt="">
-                <p>The information revolution is here and robotics and artificial intelligence are the science of the
-                    future. From useful home applications of AI to industrial uses of robotics, the future is here. You
-                    can even say hello and shake the hand of Rob the Robot.</p>
-                <p class="explore">Explore</p>
-            </div>
-            <div class="exhibition-type">
-                <h2>Ecology</h2>
-                <img src="../images/pf-s112-pa-173e01.jpg" alt="">
-                <p>In our ecology section of the museum, we unpack the dangers we currently face including global
-                    warming, extinction of species, and pollution. But we also focus on the positive ways we can all
-                    contribute to a brighter future.</p>
-                <p class="explore">Explore</p>
+            <div class="support-txt">
+                <p>
+                    There are various ways you can support the museum. Donations are very welcome and are an important
+                    way we keep this museum open and accessible to the whole community.
+                </p>
+                <p>
+                    You can also support us by donating items of interest to the museum’s collections. If you have some
+                    item or collection that you think others would enjoy, please let us know by contacting our
+                    Collections Department and they will be able to assist you.
+
+                </p>
             </div>
         </section>
     </main>
