--- a/donate.html
+++ b/donate.html
@@ -54,21 +54,18 @@
     </div>
     <main class="support-background">
         <section class="support-section">
-            <div class="support-img">
-            </div>
-            <div class="support-txt">
-                <p>
-                    There are various ways you can support the museum. Donations are very welcome and are an important
-                    way we keep this museum open and accessible to the whole community.
-                </p>
-                <p>
-                    You can also support us by donating items of interest to the museum’s collections. If you have some
-                    item or collection that you think others would enjoy, please let us know by contacting our
-                    Collections Department and they will be able to assist you.
-
-                </p>
-            </div>
-        </section>
+        <div class="support-img">
+        </div>
+        <div class="support-txt">
+            <p>
+                There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. 
+            </p>
+            <p>
+                You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
+ 
+            </p>
+        </div>
+    </section>
     </main>
     <footer>
         <div class="footer-wrapper">
