fixed meta descriptions
added ol to li list in the footer
and changed input from name to text

--- a/index.html
+++ b/index.html
@@ -5,27 +5,26 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Science museum for children, educational activities for both children & parents" />
   <title>Community Science Museum|Home</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
   <link href="styles.css" rel="stylesheet" />
 </head>
 
 <body>
   <header class="header-container">
     <div class="search">
-      <input type="text" class="search-text" placeholder="Search...">
+      <input type="text" class="search-text" placeholder="Search..." />
       <button class="search-button"><i class="fas fa-search"></i></button>
     </div>
     <div class="logo-position logo-mobile">
       <a href="index.html">
-        <img src="images/logo.png" class="logo" alt="Community Science Center" />
+        <img src="images/logo.png" class="logo" alt="Logo of the Community Science Museum" />
       </a>
     </div>
     <div class="menu">
@@ -46,7 +45,7 @@
   </header>
   <div class="spacer"></div>
   <div class="search2">
-    <input type="text" class="search-text" placeholder="Search...">
+    <input type="text" class="search-text" placeholder="Search..." />
     <button class="search-button"><i class="fas fa-search"></i></button>
   </div>
   <main>
@@ -55,26 +54,26 @@
         <div class="image1">
           <img src="../images/exhibition-1863344_1920.jpg" alt="modern art exhibition, museum exhibition" />
           <div class="box">
-            <p>Welcome to the Community Science Museum</p>
+            <h2>Welcome to the Community Science Museum</h2>
           </div>
         </div>
 
         <div class="image2">
           <img src="../images/library-1132573_1920.jpg" alt="interior of a library" />
           <div class="box">
-            <p>Visit our Library</p>
+            <h2>Visit our Library</h2>
           </div>
         </div>
         <div class="image3">
           <img src="../images/mammoth-1257288_1920.jpg" alt="mammoth skeleton on a exhibition" />
           <div class="box">
-            <p>Discover the origins of life</p>
+            <h2>Discover the origins of life</h2>
           </div>
         </div>
         <div class="image4">
           <img src="../images/celso-405219.jpg" alt="image of a solar system" />
           <div class="box">
-            <p>Learn about the solar system</p>
+            <h2>Learn about the solar system</h2>
           </div>
         </div>
       </div>
@@ -89,20 +88,18 @@
               brought to live through exhibits.
             </p>
             <p>
-              This is why we have over 1000
-              different exhibits on the many varied subjects of science to
-              explore. Many of these exhibits are designed for you to interact
-              with and play around to see science come to life (apart from the
-              dinosaur exhibits-they only come to life at night when
-              everyone`s gone home).
+              This is why we have over 1000 different exhibits on the many
+              varied subjects of science to explore. Many of these exhibits
+              are designed for you to interact with and play around to see
+              science come to life (apart from the dinosaur exhibits-they only
+              come to life at night when everyone`s gone home).
             </p>
             <p>
               Come join us at the Community Science Museum where we`re
               committed to making science accessible to all.
             </p>
           </div>
-          <div class="about-img">
-          </div>
+          <div class="about-img"></div>
         </div>
       </div>
     </section>
@@ -154,14 +151,14 @@
               On loan from the NEMO Science Museum in Amsterdam, the
               Energetica exhibition is coming to the Community Science Museum.
               It`s a series of installations that allow visitors to experience
-              the power of the elements as we harness them. 
+              the power of the elements as we harness them.
             </p>
           </div>
         </div>
         <div class="event">
           <div class="event-img">
             <p>March 14th</p>
-            <img src="../images/billetto-editorial-334686.jpg" alt="teenager wearing VR googles and painting" />
+            <img src="../images/billetto-editorial-334686.jpg" alt="teenager painting while wearing VR googles" />
           </div>
           <div class="event-txt">
             <h2>Experience Virtual Reality</h2>
@@ -180,7 +177,8 @@
         <div class="explore-container">
           <div class="explore-image">
             <h2>For kids</h2>
-            <img src="../images/happy-little-scientist-making-experiment.jpg" alt="smiling girl making experiments" />
+            <img src="../images/happy-little-scientist-making-experiment.jpg"
+              alt="smiling girl in scrubs making experiments" />
           </div>
           <div class="explore-text">
             <p>
@@ -220,7 +218,7 @@
           <div class="explore-image">
             <h2>For researchers</h2>
             <img src="../images/scientific.jpg"
-              alt="female scientist holding a controller and standing in front of a machine " />
+              alt="female scientist holding a controller and pointing it towards a machine " />
           </div>
           <div class="explore-text">
             <p>
@@ -240,7 +238,7 @@
       <h1>Subscribe to our newsletter</h1>
       <form method="get" action="index.html">
         <div class="form-wrapper">
-          <input name="name" id="name" type="name" placeholder="Name" />
+          <input name="text" id="text" type="text" placeholder="Name" />
           <input name="email" id="email" type="email" placeholder="E-mail" />
           <div class="signin-button">
             <input type="submit" value="Subscribe" class="cta-button signin-button" />
@@ -264,13 +262,15 @@
       </div>
       <div class="opening-hours">
         <h2>Opening hours</h2>
-        <li>Monday: Closed</li>
-        <li>Tuesday: 10:00-16:00</li>
-        <li>Wednesday: 10:00-16:00</li>
-        <li>Thursday: 10:00-16:00</li>
-        <li>Friday: 10:00-19:00</li>
-        <li>Saturday: 9:00-16:00</li>
-        <li>Sunday: 9:00-13:00</li>
+        <ol>
+          <li>Monday: Closed</li>
+          <li>Tuesday: 10:00-16:00</li>
+          <li>Wednesday: 10:00-16:00</li>
+          <li>Thursday: 10:00-16:00</li>
+          <li>Friday: 10:00-19:00</li>
+          <li>Saturday: 9:00-16:00</li>
+          <li>Sunday: 9:00-13:00</li>
+        </ol>
       </div>
       <div class="footer-list">
         <a href="visit.html">
