--- a/donate.html
+++ b/donate.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Donation page of the Community science museum" />
     <title>Community Science Museum|Support us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -25,7 +25,7 @@
         </div>
         <div class="logo-position logo-mobile">
             <a href="index.html">
-                <img src="images/logo.png" class="logo" alt="Community Science Center" />
+                <img src="images/logo.png" class="logo" alt="Logo of the Community Science Museum" />
             </a>
         </div>
         <div class="menu">
@@ -54,18 +54,21 @@
     </div>
     <main class="support-background">
         <section class="support-section">
-        <div class="support-img">
-        </div>
-        <div class="support-txt">
-            <p>
-                There are various ways you can support the museum. Donations are very welcome and are an important way we keep this museum open and accessible to the whole community. 
-            </p>
-            <p>
-                You can also support us by donating items of interest to the museum’s collections. If you have some item or collection that you think others would enjoy, please let us know by contacting our Collections Department and they will be able to assist you.
- 
-            </p>
-        </div>
-    </section>
+            <div class="support-img">
+            </div>
+            <div class="support-txt">
+                <p>
+                    There are various ways you can support the museum. Donations are very welcome and are an important
+                    way we keep this museum open and accessible to the whole community.
+                </p>
+                <p>
+                    You can also support us by donating items of interest to the museum’s collections. If you have some
+                    item or collection that you think others would enjoy, please let us know by contacting our
+                    Collections Department and they will be able to assist you.
+
+                </p>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-wrapper">
@@ -82,13 +85,15 @@
             </div>
             <div class="opening-hours">
                 <h2>Opening hours</h2>
-                <li>Monday: Closed</li>
-                <li>Tuesday: 10:00-16:00</li>
-                <li>Wednesday: 10:00-16:00</li>
-                <li>Thursday: 10:00-16:00</li>
-                <li>Friday: 10:00-19:00</li>
-                <li>Saturday: 9:00-16:00</li>
-                <li>Sunday: 9:00-13:00</li>
+                <ol>
+                    <li>Monday: Closed</li>
+                    <li>Tuesday: 10:00-16:00</li>
+                    <li>Wednesday: 10:00-16:00</li>
+                    <li>Thursday: 10:00-16:00</li>
+                    <li>Friday: 10:00-19:00</li>
+                    <li>Saturday: 9:00-16:00</li>
+                    <li>Sunday: 9:00-13:00</li>
+                </ol>
             </div>
             <div class="footer-list">
                 <a href="visit.html">
