--- a/getinvolved.html
+++ b/getinvolved.html
@@ -5,15 +5,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Volunteering and internship offers at the museum" />
     <title>Community Science Museum|Get involved</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
     <link href="styles.css" rel="stylesheet" />
 </head>
 
@@ -25,7 +24,7 @@
         </div>
         <div class="logo-position logo-mobile">
             <a href="index.html">
-                <img src="images/logo.png" class="logo" alt="Community Science Center" />
+                <img src="images/logo.png" class="logo" alt="Logo of the Community Science Museum" />
             </a>
         </div>
         <div class="menu">
@@ -109,6 +108,7 @@
             </div>
             <div class="opening-hours">
                 <h2>Opening hours</h2>
+                <ol>
                 <li>Monday: Closed</li>
                 <li>Tuesday: 10:00-16:00</li>
                 <li>Wednesday: 10:00-16:00</li>
@@ -116,6 +116,7 @@
                 <li>Friday: 10:00-19:00</li>
                 <li>Saturday: 9:00-16:00</li>
                 <li>Sunday: 9:00-13:00</li>
+            </ol>
             </div>
             <div class="footer-list">
                 <a href="visit.html">
