--- a/visit.html
+++ b/visit.html
@@ -1,178 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Details abput contact, address, opening hours of the museum"
+    />
     <title>Community Science Museum|Visit us</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/91f98c5a03.js"
+      crossorigin="anonymous"
+    ></script>
     <link href="styles.css" rel="stylesheet" />
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="header-container">
-        <div class="search">
-            <input type="text" class="search-text" placeholder="Search..." />
-            <button class="search-button"><i class="fas fa-search"></i></button>
-        </div>
-        <div class="logo-position logo-mobile">
-            <a href="index.html">
-                <img src="images/logo.png" class="logo" alt="Community Science Center" />
-            </a>
-        </div>
-        <div class="menu">
-            <p>MENU</p>
-            <label for="sub-menu"><i class="fas fa-bars"></i></label>
-            <input type="checkbox" id="sub-menu" />
-            <nav>
-                <div class="dropdown">
-                    <ul>
-                        <li><a href="exhibitions.html">Exhibitions</a></li>
-                        <li><a href="visit.html">Visit us</a></li>
-                        <li><a href="getinvolved.html">Get involved</a></li>
-                        <li><a href="donate.html">Support us</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
+      <div class="search">
+        <input type="text" class="search-text" placeholder="Search..." />
+        <button class="search-button"><i class="fas fa-search"></i></button>
+      </div>
+      <div class="logo-position logo-mobile">
+        <a href="index.html">
+          <img
+            src="images/logo.png"
+            class="logo"
+            alt="Logo of the Community Science Museum"
+          />
+        </a>
+      </div>
+      <div class="menu">
+        <p>MENU</p>
+        <label for="sub-menu"><i class="fas fa-bars"></i></label>
+        <input type="checkbox" id="sub-menu" />
+        <nav>
+          <div class="dropdown">
+            <ul>
+              <li><a href="exhibitions.html">Exhibitions</a></li>
+              <li><a href="visit.html">Visit us</a></li>
+              <li><a href="getinvolved.html">Get involved</a></li>
+              <li><a href="donate.html">Support us</a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
     </header>
     <div class="spacer"></div>
     <div class="search2">
-        <input type="text" class="search-text" placeholder="Search..." />
-        <button class="search-button"><i class="fas fa-search"></i></button>
+      <input type="text" class="search-text" placeholder="Search..." />
+      <button class="search-button"><i class="fas fa-search"></i></button>
     </div>
     <div class="museum">
-        <h1>Visit us</h1>
-        <img src="../images/scott-webb-102825.jpg" alt="" />
+      <h1>Visit us</h1>
+      <img
+        src="../images/scott-webb-102825.jpg"
+        alt="Image showing the facade of the Community Science Museum"
+      />
     </div>
     <main class="background-visit">
-        <section class="visit-section">
-            <div class="opening-admission">
-                <div class="opening-hrs">
-                    <h2>Opening hours</h2>
-                    <li>Monday: Closed</li>
-                    <li>Tuesday: 10:00-16:00</li>
-                    <li>Wednesday: 10:00-16:00</li>
-                    <li>Thursday: 10:00-16:00</li>
-                    <li>Friday: 10:00-19:00</li>
-                    <li>Saturday: 9:00-16:00</li>
-                    <li>Sunday: 9:00-13:00</li>
-                </div>
-                <div class="admission">
-                    <h2>Admission</h2>
-                    <p>The entrance is free for all.</p>
-                    <p>
-                        There are guided tours of the museum that leave every hour. These
-                        tours are 7 euro per person and include a handy printed guide of
-                        the museum.
-                    </p>
-                    <p>
-                        If you would like to organise a guided tour for your group of 6 or
-                        more people, please contact us on to arrange the tour
-                    </p>
-                </div>
-            </div>
+      <section class="visit-section">
+        <div class="opening-admission">
+          <div class="opening-hrs">
+            <h2>Opening hours</h2>
+            <li>Monday: Closed</li>
+            <li>Tuesday: 10:00-16:00</li>
+            <li>Wednesday: 10:00-16:00</li>
+            <li>Thursday: 10:00-16:00</li>
+            <li>Friday: 10:00-19:00</li>
+            <li>Saturday: 9:00-16:00</li>
+            <li>Sunday: 9:00-13:00</li>
+          </div>
+          <div class="admission">
+            <h2>Admission</h2>
+            <p>The entrance is free for all.</p>
+            <p>
+              There are guided tours of the museum that leave every hour. These
+              tours are 7 euro per person and include a handy printed guide of
+              the museum.
+            </p>
+            <p>
+              If you would like to organise a guided tour for your group of 6 or
+              more people, please contact us on to arrange the tour
+            </p>
+          </div>
+        </div>
 
-            <div class="map-section">
-                <div class="map-address-wrapper">
-                    <iframe class="visit-map"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.8075538832572!2d6.532744262166525!3d53.23922599038041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c9cd1bc7aa1253%3A0xd27dff10067eb237!2sLandleven%2020%2C%209747%20AJ%20Groningen%2C%20Nederland!5e0!3m2!1sno!2sno!4v1645128468138!5m2!1sno!2sno"
-                        width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
-                    <div class="visit-address">
-                        <h2>Our address</h2>
-                        <p>Community Science Museum</p>
-                        <p>Landleven 20</p>
-                        <p>9747 AJ Groningen</p>
-                        <p>Netherlands</p>
-                    </div>
-                </div>
+        <div class="map-section">
+          <div class="map-address-wrapper">
+            <iframe
+              class="visit-map"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.8075538832572!2d6.532744262166525!3d53.23922599038041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c9cd1bc7aa1253%3A0xd27dff10067eb237!2sLandleven%2020%2C%209747%20AJ%20Groningen%2C%20Nederland!5e0!3m2!1sno!2sno!4v1645128468138!5m2!1sno!2sno"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+            ></iframe>
+            <div class="visit-address">
+              <h2>Our address</h2>
+              <p>Community Science Museum</p>
+              <p>Landleven 20</p>
+              <p>9747 AJ Groningen</p>
+              <p>Netherlands</p>
             </div>
-            <div class="cafe-and-shop-wrapper">
-                <div class="cafe">
-                    <div class="cafe-txt">
-                        <h2>Food & drinks</h2>
-                        <p>
-                            There is a café attached to the museum where you can get light
-                            lunches, soft drinks, coffee, snacks and more.
-                        </p>
-                    </div>
-                    <img src="../images/interior-shot-cafe-with-chairs-near-bar-with-wooden-tables.jpg" alt="" />
-                </div>
-                <div class="shop">
-                    <div class="shop-txt">
-                        <h2>Shop</h2>
-                        <p>
-                            Our shop offers a range of memorabilia from the museum as well as
-                            great gifts and activity packs that allow you to continue to
-                            explore science even after you`ve left the museum.
-                        </p>
-                    </div>
-                    <img src="../images/library-1132573_1920.jpg" alt="" />
-                </div>
-                <div class="accessibility">
-                    <div class="accessibility-txt">
-                    <h2>Accessibility</h2>
-                    <p>
-                        The museum has wheelchair accessibility ramps. It also has audio
-                        guides and braille display signs for the visually impaired
-                    </p>
-                </div>
-                <img src="../images/wheelchair.jpg" alt="" />
-                </div>
+          </div>
+        </div>
+        <div class="cafe-and-shop-wrapper">
+          <div class="cafe">
+            <div class="cafe-txt">
+              <h2>Food & drinks</h2>
+              <p>
+                There is a café attached to the museum where you can get light
+                lunches, soft drinks, coffee, snacks and more.
+              </p>
             </div>
-        </section>
+            <img
+              src="../images/interior-shot-cafe-with-chairs-near-bar-with-wooden-tables.jpg"
+              alt="picture of interior of the Museum´s cafè"
+            />
+          </div>
+          <div class="shop">
+            <div class="shop-txt">
+              <h2>Shop</h2>
+              <p>
+                Our shop offers a range of memorabilia from the museum as well
+                as great gifts and activity packs that allow you to continue to
+                explore science even after you`ve left the museum.
+              </p>
+            </div>
+            <img src="../images/library-1132573_1920.jpg" alt="" />
+          </div>
+          <div class="accessibility">
+            <div class="accessibility-txt">
+              <h2>Accessibility</h2>
+              <p>
+                The museum has wheelchair accessibility ramps. It also has audio
+                guides and braille display signs for the visually impaired
+              </p>
+            </div>
+            <img
+              src="../images/wheelchair.jpg"
+              alt="image showing a wheelchair"
+            />
+          </div>
+        </div>
+      </section>
     </main>
     <footer>
-        <div class="footer-wrapper">
-            <div class="contact">
-                <h2>Contact</h2>
-                <address>
-                    <p>Community Science Museum</p>
-                    <p>Landleven 20</p>
-                    <p>9747 AJ Groningen</p>
-                    <p>Netherlands</p>
-                </address>
-                <p>Tlf: 98 76 90 123</p>
-                <p>Email: post@communityscience.nl</p>
-            </div>
-            <div class="opening-hours">
-                <h2>Opening hours</h2>
-                <li>Monday: Closed</li>
-                <li>Tuesday: 10:00-16:00</li>
-                <li>Wednesday: 10:00-16:00</li>
-                <li>Thursday: 10:00-16:00</li>
-                <li>Friday: 10:00-19:00</li>
-                <li>Saturday: 9:00-16:00</li>
-                <li>Sunday: 9:00-13:00</li>
-            </div>
-            <div class="footer-list">
-                <a href="visit.html">
-                    <p>Contact</p>
-                </a>
-                <a href="exhibitions.html">
-                    <p>Exhibitions</p>
-                </a>
-                <a href="getinvolved.html">
-                    <p>Get involved</p>
-                </a>
-            </div>
-
-            <div class="social-media">
-                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
-                <a href="https://nb-no.facebook.com/"><i class="fab fa-facebook"></i></a>
-                <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
-            </div>
+      <div class="footer-wrapper">
+        <div class="contact">
+          <h2>Contact</h2>
+          <address>
+            <p>Community Science Museum</p>
+            <p>Landleven 20</p>
+            <p>9747 AJ Groningen</p>
+            <p>Netherlands</p>
+          </address>
+          <p>Tlf: 98 76 90 123</p>
+          <p>Email: post@communityscience.nl</p>
         </div>
-        <p class="copyright-txt">&copy; 2022 Community Science Museum</p>
-    </footer>
-</body>
+        <div class="opening-hours">
+          <h2>Opening hours</h2>
+          <ol>
+          <li>Monday: Closed</li>
+          <li>Tuesday: 10:00-16:00</li>
+          <li>Wednesday: 10:00-16:00</li>
+          <li>Thursday: 10:00-16:00</li>
+          <li>Friday: 10:00-19:00</li>
+          <li>Saturday: 9:00-16:00</li>
+          <li>Sunday: 9:00-13:00</li>
+        </ol>
+        </div>
+        <div class="footer-list">
+          <a href="visit.html">
+            <p>Contact</p>
+          </a>
+          <a href="exhibitions.html">
+            <p>Exhibitions</p>
+          </a>
+          <a href="getinvolved.html">
+            <p>Get involved</p>
+          </a>
+        </div>
 
+        <div class="social-media">
+          <a href="https://www.instagram.com/"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a href="https://nb-no.facebook.com/"
+            ><i class="fab fa-facebook"></i
+          ></a>
+          <a href="https://twitter.com/twitter"
+            ><i class="fab fa-twitter"></i
+          ></a>
+        </div>
+      </div>
+      <p class="copyright-txt">&copy; 2022 Community Science Museum</p>
+    </footer>
+  </body>
 </html>
