added some more details to each page

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -35,7 +35,7 @@
                 <div class="dropdown">
                     <ul>
                         <li><a href="exhibitions.html">Exhibitions</a></li>
-                        <li><a href="visit.html">Visit us</a></li>
+                        <li><a href="visit.html">Visit</a></li>
                         <li><a href="getinvolved.html">Get involved</a></li>
                         <li><a href="donate.html">Support us</a></li>
                     </ul>
@@ -104,7 +104,7 @@
                     <p>Netherlands</p>
                 </address>
                 <p>Tlf: 98 76 90 123</p>
-                <p>Email: post@communityscience.nl</p>
+                <p><i class="far fa-envelope"></i> post@communityscience.nl</p>
             </div>
             <div class="opening-hours">
                 <h2>Opening hours</h2>
