--- a/visit.html
+++ b/visit.html
@@ -8,7 +8,7 @@
       name="description"
       content="Details abput contact, address, opening hours of the museum"
     />
-    <title>Community Science Museum|Visit us</title>
+    <title>Community Science Museum|Visit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,7 +49,7 @@
           <div class="dropdown">
             <ul>
               <li><a href="exhibitions.html">Exhibitions</a></li>
-              <li><a href="visit.html">Visit us</a></li>
+              <li><a href="visit.html">Visit</a></li>
               <li><a href="getinvolved.html">Get involved</a></li>
               <li><a href="donate.html">Support us</a></li>
             </ul>
@@ -63,7 +63,7 @@
       <button class="search-button"><i class="fas fa-search"></i></button>
     </div>
     <div class="museum">
-      <h1>Visit us</h1>
+      <h1>Visit</h1>
       <img
         src="../images/scott-webb-102825.jpg"
         alt="Image showing the facade of the Community Science Museum"
@@ -74,13 +74,15 @@
         <div class="opening-admission">
           <div class="opening-hrs">
             <h2>Opening hours</h2>
-            <li>Monday: Closed</li>
-            <li>Tuesday: 10:00-16:00</li>
-            <li>Wednesday: 10:00-16:00</li>
-            <li>Thursday: 10:00-16:00</li>
-            <li>Friday: 10:00-19:00</li>
-            <li>Saturday: 9:00-16:00</li>
-            <li>Sunday: 9:00-13:00</li>
+            <ol>
+              <li>Monday: Closed</li>
+              <li>Tuesday: 10:00-16:00</li>
+              <li>Wednesday: 10:00-16:00</li>
+              <li>Thursday: 10:00-16:00</li>
+              <li>Friday: 10:00-19:00</li>
+              <li>Saturday: 9:00-16:00</li>
+              <li>Sunday: 9:00-13:00</li>
+            </ol>
           </div>
           <div class="admission">
             <h2>Admission</h2>
@@ -92,7 +94,7 @@
             </p>
             <p>
               If you would like to organise a guided tour for your group of 6 or
-              more people, please contact us on to arrange the tour
+              more people, please contact us on <strong>98 76 90 123</strong> or send us an e-mail to <strong>post@communityscience.nl</strong> to arrange the tour
             </p>
           </div>
         </div>
@@ -169,19 +171,19 @@
             <p>Netherlands</p>
           </address>
           <p>Tlf: 98 76 90 123</p>
-          <p>Email: post@communityscience.nl</p>
+          <p><i class="far fa-envelope"></i> post@communityscience.nl</p>
         </div>
         <div class="opening-hours">
           <h2>Opening hours</h2>
           <ol>
-          <li>Monday: Closed</li>
-          <li>Tuesday: 10:00-16:00</li>
-          <li>Wednesday: 10:00-16:00</li>
-          <li>Thursday: 10:00-16:00</li>
-          <li>Friday: 10:00-19:00</li>
-          <li>Saturday: 9:00-16:00</li>
-          <li>Sunday: 9:00-13:00</li>
-        </ol>
+            <li>Monday: Closed</li>
+            <li>Tuesday: 10:00-16:00</li>
+            <li>Wednesday: 10:00-16:00</li>
+            <li>Thursday: 10:00-16:00</li>
+            <li>Friday: 10:00-19:00</li>
+            <li>Saturday: 9:00-16:00</li>
+            <li>Sunday: 9:00-13:00</li>
+          </ol>
         </div>
         <div class="footer-list">
           <a href="visit.html">
