--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="dropdown">
           <ul>
             <li><a href="exhibitions.html">Exhibitions</a></li>
-            <li><a href="visit.html">Visit us</a></li>
+            <li><a href="visit.html">Visit</a></li>
             <li><a href="getinvolved.html">Get involved</a></li>
             <li><a href="donate.html">Support us</a></li>
           </ul>
@@ -79,7 +79,7 @@
       </div>
     </section>
     <section class="about-section">
-      <h1>Our goal</h1>
+      <h1>Our Goal</h1>
       <div class="about-background">
         <div class="about-wrapper">
           <div class="about-text">
@@ -105,7 +105,7 @@
     </section>
 
     <section class="event-section">
-      <h1>Events & Exhibitions</h1>
+      <h1>Special Events</h1>
       <div class="event-container">
         <div class="event">
           <div class="event-img">
@@ -235,10 +235,10 @@
       </div>
     </section>
     <section class="newsletter-section">
-      <h1>Subscribe to our newsletter</h1>
+      <h1>Subscribe to our Newsletter</h1>
       <form method="get" action="index.html">
         <div class="form-wrapper">
-          <input name="text" id="text" type="text" placeholder="Name" />
+          <input name="text" id="text" type="text" placeholder="Full name" />
           <input name="email" id="email" type="email" placeholder="E-mail" />
           <div class="signin-button">
             <input type="submit" value="Subscribe" class="cta-button signin-button" />
@@ -258,7 +258,7 @@
           <p>Netherlands</p>
         </address>
         <p>Tlf: 98 76 90 123</p>
-        <p>Email: post@communityscience.nl</p>
+        <p><i class="far fa-envelope"></i> post@communityscience.nl</p>
       </div>
       <div class="opening-hours">
         <h2>Opening hours</h2>
