added alt text to get involved page

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         </div>
 
         <div class="image2">
-          <img src="../images/library-1132573_1920.jpg" alt="interior of a library" />
+          <img src="../images/library-1132573_1920.jpg" alt="image showing museum´s gift and book shop" />
           <div class="box">
-            <h2>Visit our Library</h2>
+            <h2>Visit our Shop</h2>
           </div>
         </div>
         <div class="image3">
