added subscribed page

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     </section>
     <section class="newsletter-section">
       <h1>Subscribe to our Newsletter</h1>
-      <form method="get" action="index.html">
+      <form method="get" action="subscribed.html">
         <div class="form-wrapper">
           <input name="text" id="text" type="text" placeholder="Full name" />
           <input name="email" id="email" type="email" placeholder="E-mail" />
