--- a/subscribed.html
+++ b/subscribed.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Volunteering and internship offers at the museum" />
-    <title>Community Science Museum|Get involved</title>
+    <meta name="description" content="Successful subscription to museum´s newsletter" />
+    <title>Community Science Museum|Successful subscription</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
@@ -48,49 +49,11 @@
         <input type="text" class="search-text" placeholder="Search..." />
         <button class="search-button"><i class="fas fa-search"></i></button>
     </div>
-    <div class="getinvolved">
-        <h1>Get involved</h1>
-    </div>
-    <main class="background-getinvolved">
-        <section class="getinvolved-section">
-            <h2>Volunteer</h2>
-            <div class="volunteer">
-                <div class="volunteer-txt">
-                    <p>
-                        A number of people volunteer their time and effort to keep the
-                        displays in good order and ready for visitors to come and enjoy.
-                    </p>
-                    <p>
-                        Volunteering has its perks including getting to see behind the
-                        scenes of a working museum, access to staff-only lectures, and a
-                        monthly lunch where all staff and volunteers come together to
-                        discuss ideas for future exhibits and strategies for the museum.
-                    </p>
-                    <p>
-                        You can help volunteer in a number of different spheres. Please
-                        contact us if you’d like to find out more about how you can get
-                        involved.
-                    </p>
-                </div>
-                <div class="volunteer-img"></div>
-            </div>
-            <h2>Internships</h2>
-            <div class="internships">
-                <div class="internships-txt">
-                    <p>
-                        Are you interested in working in a museum? Do you enjoy the fun
-                        and excitement of sharing the wonders of nature with people? Well
-                        you could be just the right person to enjoy an internship at the
-                        museum.
-                    </p>
-                    <p>
-                        You’ll be learning from a number of different academics and people
-                        who are passionate about science and sharing it with the wider
-                        community.
-                    </p>
-                </div>
-                <div class="internships-img"></div>
-            </div>
+    <main>
+        <section class="subscribed-section">
+            <h1>Thank you for subscribing to our newsletter</h1>
+            <p><i class="far fa-envelope-open"></i></p>
+            <a href="index.html"><p><i class="fas fa-arrow-left"></i> Go back to homepage </p></a>
         </section>
     </main>
     <footer>
