--- a/donate.html
+++ b/donate.html
@@ -78,8 +78,7 @@
           <p>
             You can also support us by donating items of interest to the
             museum’s collections. If you have some item or collection that you
-            think others would enjoy, please let us know by contacting our
-            <strong>Collections Department </strong> and they will be able to
+            think others would enjoy, please let us know by contacting our  <a href="mailto:post@communityscience.nl">Collections Department </a>and they will be able to
             assist you.
           </p>
         </div>
