--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
               will excite and inspire them.
             </p>
             <p>
-              Please get in touch with us here to find out more about our
+              Please get in touch with us <a href="mailto:post@communityscience.nl">here</a> to find out more about our
               facilities and to arrange a time to bring your students through
               for a visit.
             </p>
