--- a/visit.html
+++ b/visit.html
@@ -89,11 +89,15 @@
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2387.8075538832572!2d6.532744262166525!3d53.23922599038041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c9cd1bc7aa1253%3A0xd27dff10067eb237!2sLandleven%2020%2C%209747%20AJ%20Groningen%2C%20Nederland!5e0!3m2!1sno!2sno!4v1645128468138!5m2!1sno!2sno"
             width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"></iframe>
           <div class="visit-address">
-            <h2>Our address</h2>
-            <p>Community Science Museum</p>
-            <p>Landleven 20</p>
-            <p>9747 AJ Groningen</p>
-            <p>Netherlands</p>
+            <h2>Contact</h2>
+            <address>
+              <p>Community Science Museum</p>
+              <p>Landleven 20</p>
+              <p>9747 AJ Groningen</p>
+              <p>Netherlands</p>
+            </address>
+            <p>Tlf: 98 76 90 123</p>
+            <p><i class="far fa-envelope"></i> post@communityscience.nl</p>
           </div>
         </div>
       </div>
