--- a/subscribed.html
+++ b/subscribed.html
@@ -53,7 +53,7 @@
         <section class="subscribed-section">
             <h1>Thank you for subscribing to our newsletter</h1>
             <p><i class="far fa-envelope-open"></i></p>
-            <a href="index.html"><p><i class="fas fa-arrow-left"></i> Go back to homepage </p></a>
+            <a href="index.html"><p><i class="fas fa-arrow-left"></i> Back to homepage </p></a>
         </section>
     </main>
     <footer>
