added alt text and formatted code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Science museum for children, educational activities for both children & parents" />
+  <meta name="description"
+    content="Community science museum´s homepage, overview over different interactive & educational activities for both children & parents" />
   <title>Community Science Museum|Home</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -57,7 +58,6 @@
             <h2>Welcome to the Community Science Museum</h2>
           </div>
         </div>
-
         <div class="image2">
           <img src="../images/library-1132573_1920.jpg" alt="image showing museum´s gift and book shop" />
           <div class="box">
@@ -65,13 +65,13 @@
           </div>
         </div>
         <div class="image3">
-          <img src="../images/mammoth-1257288_1920.jpg" alt="mammoth skeleton on a exhibition" />
+          <img src="../images/mammoth-1257288_1920.jpg" alt="skeleton of a mammoth on a exhibition" />
           <div class="box">
             <h2>Discover the origins of life</h2>
           </div>
         </div>
         <div class="image4">
-          <img src="../images/celso-405219.jpg" alt="image of a solar system" />
+          <img src="../images/celso-405219.jpg" alt="image of the solar system" />
           <div class="box">
             <h2>Learn about the solar system</h2>
           </div>
@@ -103,7 +103,6 @@
         </div>
       </div>
     </section>
-
     <section class="event-section">
       <h1>Special Events</h1>
       <div class="event-container">
@@ -208,9 +207,10 @@
               will excite and inspire them.
             </p>
             <p>
-              Please get in touch with us <a href="mailto:post@communityscience.nl">here</a> to find out more about our
-              facilities and to arrange a time to bring your students through
-              for a visit.
+              Please get in touch with us
+              <a href="mailto:post@communityscience.nl">here</a> to find out
+              more about our facilities and to arrange a time to bring your
+              students through for a visit.
             </p>
           </div>
         </div>
@@ -283,7 +283,6 @@
           <p>Get involved</p>
         </a>
       </div>
-
       <div class="social-media">
         <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
         <a href="https://nb-no.facebook.com/"><i class="fab fa-facebook"></i></a>
