--- a/visit.html
+++ b/visit.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Details abput contact, address, opening hours of the museum" />
+  <meta name="description" content="Contact information, address & map, opening hours of the museum" />
   <title>Community Science Museum|Visit</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -50,7 +50,7 @@
   </div>
   <div class="museum">
     <h1>Visit</h1>
-    <img src="../images/scott-webb-102825.jpg" alt="Image showing the facade of the Community Science Museum" />
+    <img src="../images/scott-webb-102825.jpg" alt="Image showing colorful facade of the Community Science Museum" />
   </div>
   <main class="background-visit">
     <section class="visit-section">
@@ -77,12 +77,12 @@
           </p>
           <p>
             If you would like to organise a guided tour for your group of 6 or
-            more people, please contact us on <strong>98 76 90 123</strong> or send us an e-mail to
-            <strong>post@communityscience.nl</strong> to arrange the tour
+            more people, please contact us on <strong>98 76 90 123</strong> or
+            send us an e-mail to <strong>post@communityscience.nl</strong> to
+            arrange the tour
           </p>
         </div>
       </div>
-
       <div class="map-section">
         <div class="map-address-wrapper">
           <iframe class="visit-map"
@@ -111,7 +111,7 @@
             </p>
           </div>
           <img src="../images/interior-shot-cafe-with-chairs-near-bar-with-wooden-tables.jpg"
-            alt="picture of interior of the Museum´s cafè" />
+            alt="Interior of the Museum´s cafè" />
         </div>
         <div class="shop">
           <div class="shop-txt">
@@ -122,7 +122,7 @@
               explore science even after you`ve left the museum.
             </p>
           </div>
-          <img src="../images/library-1132573_1920.jpg" alt="image showing museum´s gift and book shop" />
+          <img src="../images/library-1132573_1920.jpg" alt="Museum´s gift and book shop" />
         </div>
         <div class="accessibility">
           <div class="accessibility-txt">
@@ -132,7 +132,7 @@
               guides and braille display signs for the visually impaired
             </p>
           </div>
-          <img src="../images/wheelchair.jpg" alt="image showing a wheelchair" />
+          <img src="../images/wheelchair.jpg" alt="image of a wheelchair" />
         </div>
       </div>
     </section>
@@ -173,7 +173,6 @@
           <p>Get involved</p>
         </a>
       </div>
-
       <div class="social-media">
         <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
         <a href="https://nb-no.facebook.com/"><i class="fab fa-facebook"></i></a>
