--- a/donate.html
+++ b/donate.html
@@ -1,139 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Donation page of the Community science museum"
-    />
-    <title>Community Science Museum|Support us</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/91f98c5a03.js"
-      crossorigin="anonymous"
-    ></script>
-    <link href="styles.css" rel="stylesheet" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Donation page of the Community science museum" />
+  <title>Community Science Museum|Support us</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/91f98c5a03.js" crossorigin="anonymous"></script>
+  <link href="styles.css" rel="stylesheet" />
+</head>
 
-  <body>
-    <header class="header-container">
-      <div class="search">
-        <input type="text" class="search-text" placeholder="Search..." />
-        <button class="search-button"><i class="fas fa-search"></i></button>
-      </div>
-      <div class="logo-position logo-mobile">
-        <a href="index.html">
-          <img
-            src="images/logo.png"
-            class="logo"
-            alt="Logo of the Community Science Museum"
-          />
-        </a>
-      </div>
-      <div class="menu">
-        <p>MENU</p>
-        <label for="sub-menu"><i class="fas fa-bars"></i></label>
-        <input type="checkbox" id="sub-menu" />
-        <nav>
-          <div class="dropdown">
-            <ul>
-              <li><a href="exhibitions.html">Exhibitions</a></li>
-              <li><a href="visit.html">Visit</a></li>
-              <li><a href="getinvolved.html">Get involved</a></li>
-              <li><a href="donate.html">Support us</a></li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <div class="spacer"></div>
-    <div class="search2">
+<body>
+  <header class="header-container">
+    <div class="search">
       <input type="text" class="search-text" placeholder="Search..." />
       <button class="search-button"><i class="fas fa-search"></i></button>
     </div>
-    <div class="support-us">
-      <h1>Support us</h1>
+    <div class="logo-position logo-mobile">
+      <a href="index.html">
+        <img src="images/logo.png" class="logo" alt="Logo of the Community Science Museum" />
+      </a>
     </div>
-    <main class="support-background">
-      <section class="support-section">
-        <div class="support-img"></div>
-        <div class="support-txt">
-          <p>
-            There are various ways you can support the museum. Donations are
-            very welcome and are an important way we keep this museum open and
-            accessible to the whole community.
-          </p>
-          <p>
-            You can also support us by donating items of interest to the
-            museum’s collections. If you have some item or collection that you
-            think others would enjoy, please let us know by contacting our  <a href="mailto:post@communityscience.nl">Collections Department </a>and they will be able to
-            assist you.
-          </p>
+    <div class="menu">
+      <p>MENU</p>
+      <label for="sub-menu"><i class="fas fa-bars"></i></label>
+      <input type="checkbox" id="sub-menu" />
+      <nav>
+        <div class="dropdown">
+          <ul>
+            <li><a href="exhibitions.html">Exhibitions</a></li>
+            <li><a href="visit.html">Visit</a></li>
+            <li><a href="getinvolved.html">Get involved</a></li>
+            <li><a href="donate.html">Support us</a></li>
+          </ul>
         </div>
-      </section>
-    </main>
-    <footer>
-      <div class="footer-wrapper">
-        <div class="contact">
-          <h2>Contact</h2>
-          <address>
-            <p>Community Science Museum</p>
-            <p>Landleven 20</p>
-            <p>9747 AJ Groningen</p>
-            <p>Netherlands</p>
-          </address>
-          <p>Tlf: 98 76 90 123</p>
-          <p><i class="far fa-envelope"></i> post@communityscience.nl</p>
-        </div>
-        <div class="opening-hours">
-          <h2>Opening hours</h2>
-          <ol>
-            <li>Monday: Closed</li>
-            <li>Tuesday: 10:00-16:00</li>
-            <li>Wednesday: 10:00-16:00</li>
-            <li>Thursday: 10:00-16:00</li>
-            <li>Friday: 10:00-19:00</li>
-            <li>Saturday: 9:00-16:00</li>
-            <li>Sunday: 9:00-13:00</li>
-          </ol>
-        </div>
-        <div class="footer-list">
-          <a href="visit.html">
-            <p>Contact</p>
-          </a>
-          <a href="exhibitions.html">
-            <p>Exhibitions</p>
-          </a>
-          <a href="getinvolved.html">
-            <p>Get involved</p>
-          </a>
-        </div>
-
-        <div class="social-media">
-          <a href="https://www.instagram.com/"
-            ><i class="fab fa-instagram"></i
-          ></a>
-          <a href="https://nb-no.facebook.com/"
-            ><i class="fab fa-facebook"></i
-          ></a>
-          <a href="https://twitter.com/twitter"
-            ><i class="fab fa-twitter"></i
-          ></a>
-        </div>
+      </nav>
+    </div>
+  </header>
+  <div class="spacer"></div>
+  <div class="search2">
+    <input type="text" class="search-text" placeholder="Search..." />
+    <button class="search-button"><i class="fas fa-search"></i></button>
+  </div>
+  <div class="support-us">
+    <h1>Support us</h1>
+  </div>
+  <main class="support-background">
+    <section class="support-section">
+      <div class="support-img"></div>
+      <div class="support-txt">
+        <p>
+          There are various ways you can support the museum. Donations are
+          very welcome and are an important way we keep this museum open and
+          accessible to the whole community.
+        </p>
+        <p>
+          You can also support us by donating items of interest to the
+          museum’s collections. If you have some item or collection that you
+          think others would enjoy, please let us know by contacting our
+          <a href="mailto:post@communityscience.nl">Collections Department </a>and they will be able to assist you.
+        </p>
       </div>
-      <p class="copyright-txt">&copy; 2022 Community Science Museum</p>
-    </footer>
-  </body>
+    </section>
+  </main>
+  <footer>
+    <div class="footer-wrapper">
+      <div class="contact">
+        <h2>Contact</h2>
+        <address>
+          <p>Community Science Museum</p>
+          <p>Landleven 20</p>
+          <p>9747 AJ Groningen</p>
+          <p>Netherlands</p>
+        </address>
+        <p>Tlf: 98 76 90 123</p>
+        <p><i class="far fa-envelope"></i> post@communityscience.nl</p>
+      </div>
+      <div class="opening-hours">
+        <h2>Opening hours</h2>
+        <ol>
+          <li>Monday: Closed</li>
+          <li>Tuesday: 10:00-16:00</li>
+          <li>Wednesday: 10:00-16:00</li>
+          <li>Thursday: 10:00-16:00</li>
+          <li>Friday: 10:00-19:00</li>
+          <li>Saturday: 9:00-16:00</li>
+          <li>Sunday: 9:00-13:00</li>
+        </ol>
+      </div>
+      <div class="footer-list">
+        <a href="visit.html">
+          <p>Contact</p>
+        </a>
+        <a href="exhibitions.html">
+          <p>Exhibitions</p>
+        </a>
+        <a href="getinvolved.html">
+          <p>Get involved</p>
+        </a>
+      </div>
+      <div class="social-media">
+        <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+        <a href="https://nb-no.facebook.com/"><i class="fab fa-facebook"></i></a>
+        <a href="https://twitter.com/twitter"><i class="fab fa-twitter"></i></a>
+      </div>
+    </div>
+    <p class="copyright-txt">&copy; 2022 Community Science Museum</p>
+  </footer>
+</body>
+
 </html>
