--- a/subscribed.html
+++ b/subscribed.html
@@ -9,7 +9,6 @@
     <title>Community Science Museum|Successful subscription</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
     <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet" />
@@ -53,7 +52,9 @@
         <section class="subscribed-section">
             <h1>Thank you for subscribing to our newsletter</h1>
             <p><i class="far fa-envelope-open"></i></p>
-            <a href="index.html"><p><i class="fas fa-arrow-left"></i> Back to homepage </p></a>
+            <a href="index.html">
+                <p><i class="fas fa-arrow-left"></i> Back to homepage</p>
+            </a>
         </section>
     </main>
     <footer>
@@ -92,7 +93,6 @@
                     <p>Get involved</p>
                 </a>
             </div>
-
             <div class="social-media">
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
                 <a href="https://nb-no.facebook.com/"><i class="fab fa-facebook"></i></a>
